# codetracer-wasmi-recorder

./: .gitignore  .prettierignore  AUDIT-CTFS-2026-05.md  Cargo.toml  Justfile  README.md  audit.toml  env.ps1  flake.nix  justfile  repro.nim  shell.nix  wasm_test.c
.github/: sibling-repos
.github/workflows/: ci-reprobuild.yml  miri.yml  publish-aur.yml  publish-chocolatey.yml  publish-deb.yml  publish-homebrew.yml  publish-rpm.yml  publish-scoop.yml  rust.yml  update-nightly.yml
crates/c_api/: Cargo.toml
crates/c_api/src/: func.rs  instance.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  context.rs  main.rs  recorder.rs
crates/cli/tests/: ctfs_audit.rs
crates/cli/tests/wats/: ctfs_add.wat  ctfs_trap.wat
crates/ir/src/: enum.rs  for_each_op.rs  visit_regs.rs
crates/tracer/: Cargo.toml
crates/tracer/src/: gimli.rs  lib.rs
crates/wasmi/: Cargo.toml  expanded
crates/wasmi/src/: error.rs  linker.rs  store.rs
crates/wasmi/src/engine/: code_map.rs  config.rs  mod.rs  resumable.rs
crates/wasmi/src/engine/executor/: instrs.rs  mod.rs
crates/wasmi/src/engine/executor/instrs/: branch.rs  call.rs  (+7 more)
crates/wasmi/src/engine/translator/: comparator.rs  instr_encoder.rs  mod.rs  relink_result.rs  visit.rs  visit_register.rs
crates/wasmi/src/func/: mod.rs  typed_func.rs
crates/wasmi/src/instance/: mod.rs
crates/wasmi/src/module/: parser.rs
crates/wasmi/src/module/instantiate/: pre.rs
crates/wasmi/src/module/parser/: buffered.rs  streaming.rs
crates/wast/: Cargo.toml
crates/wast/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: execute.rs
packaging/: build-all.sh  recorder-metadata.yml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/chocolatey/: build.sh  codetracer-wasmi-recorder.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
packaging/deb/: build.sh  control
packaging/homebrew/: codetracer-wasmi-recorder.rb
packaging/nix/: default.nix
packaging/rpm/: build.sh  codetracer-wasmi-recorder.spec
packaging/scoop/: build.sh  codetracer-wasmi-recorder.json
(+3 files in other folders)
