[package]
name = "wasmi_cli"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi/"
description = "WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
wasmi = { workspace = true, features = ["wat"] }
wasmi_wasi = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# CodeTracer trace format (path-based sibling deps; mirrors the Rust-native
# recorders such as codetracer-polkavm-recorder, codetracer-miden-recorder,
# codetracer-ton-recorder which embed a stack VM directly).  These crates
# are part of the wider workspace at metacraft/codetracer-trace-format/.
codetracer_trace_types = { path = "../../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer_nim = { path = "../../../codetracer-trace-format/codetracer_trace_writer_nim" }

[dev-dependencies]
assert_cmd = "2.0.7"
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }
serde_json = "1.0"
tempfile = "3"

[features]
default = []
hash-collections = ["wasmi/hash-collections"]
prefer-btree-collections = ["wasmi/prefer-btree-collections"]
simd = ["wasmi/simd"]

# We need to put this [profile.release] section due to this bug in Cargo:
# https://github.com/rust-lang/cargo/issues/8264
# Uncomment the lines below before publishing a new `wasmi_cli` release to crates.io.
# [profile.release]
# lto = "fat"
# codegen-units = 1
