[package]
name = "wasmi_tracer"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
# version.workspace = true
rust-version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
